gitops/apps/rhcl-demo/base/resources/istio/istio-waypoint-rhcl-oidc-portal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: rhcl-oidc-portal-waypoint
  namespace: rhcl-oidc-portal
  labels:
    istio.io/waypoint-for: service
  annotations:
    argocd.argoproj.io/sync-wave: "50"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
